@startuml
!define DEFAULT
!includeurl https://raw.githubusercontent.com/JustMilan/plantuml-styles/main/style.puml
hide methods

title Domain Class Diagram

note as note1
All classes do have an Id
generated by Spring
end note

'classes
class Address {
- houseNumber
- addition
- street
- postalcode
- city
}

class Location {
- name
}

class Room {
- floor
- capacity
}

class Reservation {
- date
- startTime
- endTime
- workplaceAmount
}

class Recurrence <<embeddable>> {
- active
}

enum RecurrencePattern <<enumeration>> {
DAILY
WEEKLY
BIWEEKLY
MONTHLY
}

class Employee {
- firstName
- lastName
}

'Relations
Address "1" -down- Location
Location -right- "1..*" Room
Room "1" -- Reservation
Reservation -- "1" Employee
Reservation --"1" Recurrence
Recurrence .. RecurrencePattern:<<use>>

@enduml
